--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="container">
         <header class="main-header">
             <div class="search-container">
-                <label for="search">S</label>
+                <button type="submit">search</button>
                 <input type="search" name="search" id="search">
             </div>
             <div class="user-info-links">
-                <div>Bell</div>
+                <img src="images/bell-outline.svg" alt="bell">
                 <div>icon</div>
                 <div>Lewis Knapp</div>
             </div>
@@ -30,7 +30,7 @@
                 <button class="header-btn">Share</button>
             </div>
         </header>
-        <nav>
+        <nav class="main-nav">
             <h1>Dashboard</h1>
             <ul class="main-nav">
                 <li><a href="#">Home</a></li>
@@ -50,37 +50,61 @@
                 <div class="project">
                     <h4>Dummy title</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam, hic</p>
-                    <div class="icon-links"></div>
+                    <div class="icon-links">
+                        <img src="images/heart-plus-outline.svg" alt="add">
+                        <img src="images/information-outline.svg" alt="info">
+                        <img src="images/eye-outline.svg" alt="eye">
+                    </div>
                 </div>
                 <div class="project">
                     <h4>Dummy title</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam, hic</p>
-                    <div class="icon-links"></div>
+                    <div class="icon-links">
+                        <img src="images/heart-plus-outline.svg" alt="add">
+                        <img src="images/information-outline.svg" alt="info">
+                        <img src="images/eye-outline.svg" alt="eye">
+                    </div>
                 </div>
                 <div class="project">
                     <h4>Dummy title</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam, hic</p>
-                    <div class="icon-links"></div>
+                    <div class="icon-links">
+                        <img src="images/heart-plus-outline.svg" alt="add">
+                        <img src="images/information-outline.svg" alt="info">
+                        <img src="images/eye-outline.svg" alt="eye">
+                    </div>
                 </div>
                 <div class="project">
                     <h4>Dummy title</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam, hic</p>
-                    <div class="icon-links"></div>
+                    <div class="icon-links">
+                        <img src="images/heart-plus-outline.svg" alt="add">
+                        <img src="images/information-outline.svg" alt="info">
+                        <img src="images/eye-outline.svg" alt="eye">
+                    </div>
                 </div>
                 <div class="project">
                     <h4>Dummy title</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam, hic</p>
-                    <div class="icon-links"></div>
+                    <div class="icon-links">
+                        <img src="images/heart-plus-outline.svg" alt="add">
+                        <img src="images/information-outline.svg" alt="info">
+                        <img src="images/eye-outline.svg" alt="eye">
+                    </div>
                 </div>
                 <div class="project">
                     <h4>Dummy title</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam, hic</p>
-                    <div class="icon-links"></div>
+                    <div class="icon-links">
+                        <img src="images/heart-plus-outline.svg" alt="add">
+                        <img src="images/information-outline.svg" alt="info">
+                        <img src="images/eye-outline.svg" alt="eye">
+                    </div>
                 </div>
             </div>
             <div class="right-side">
+                <h3>Announcements</h3>
                 <div class="announcements">
-                    <h3>Announcements</h3>
                     <div class="announcements-container">
                         <div class="announcement announcement 1">
                             <h4>Site Maintenance</h4>
@@ -96,11 +120,45 @@
                         </div>
                     </div>
                 </div>
+                <h3>Trending</h3>
                 <div class="trending">
-                    <h3>Trending</h3>
                     <div class="trending-container">
                         <div class="trending-item">
-                            <img src="" alt="">
+                            <div class="trending-img">
+                                <img src="images/male-placeholder.png" alt="profile icon photo">
+                            </div>
+                            <div class="trending-user-info">
+                                <p>@name</p>
+                                <p>name</p>
+                            </div>
+                        </div>
+                        <div class="trending-item">
+                            <div class="trending-img">
+                                <img src="images/male-placeholder.png" alt="profile icon photo">
+                            </div>
+                            <div class="trending-user-info">
+                                <p>@name</p>
+                                <p>name</p>
+                            </div>
+                        </div>
+                        <div class="trending-item">
+                            <div class="trending-img">
+                                <img src="images/male-placeholder.png" alt="profile icon photo">
+                            </div>
+                            <div class="trending-user-info">
+                                <p>@name</p>
+                                <p>name</p>
+                            </div>
+                        </div>
+                        <div class="trending-item">
+                            <div class="trending-img">
+                                <img src="images/male-placeholder.png" alt="profile icon photo">
+                            </div>
+                            <div class="trending-user-info">
+                                <p>@name</p>
+                                <p>name</p>
+                            </div>
+                        </div>
                         </div>
                     </div>
                 </div>
