finalise core formatting for v1

--- a/index.html
+++ b/index.html
@@ -11,23 +11,25 @@
     <div class="container">
         <header class="main-header">
             <div class="search-container">
-                <button type="submit">search</button>
+                <img src="images/magnify.svg" alt="search">
                 <input type="search" name="search" id="search">
             </div>
             <div class="user-info-links">
                 <img src="images/bell-outline.svg" alt="bell">
-                <div>icon</div>
+                <div><img src="images/user.png" alt="user"></div>
                 <div>Lewis Knapp</div>
             </div>
             <div class="user-info">
-                <div>Icon</div>
-                <p>Hi there</p>
-                <p>Lewis Knapp (@Lewis)</p>
+                <div><img src="images/user.png" alt="user"></div>
+                <div class="user-info-text">
+                    <p><strong>Hi there</strong></p>
+                    <p>Lewis Knapp (@Lewis)</p>
+                </div>
             </div>
             <div class="header-buttons">
-                <button class="header-btn">New</button>
-                <button class="header-btn">Upload</button>
-                <button class="header-btn">Share</button>
+                <button class="header-btn button-28">New</button>
+                <button class="header-btn button-28">Upload</button>
+                <button class="header-btn button-28">Share</button>
             </div>
         </header>
         <nav class="main-nav">
@@ -48,8 +50,10 @@
             <div class="projects">
                 <h3>Your Projects</h3>
                 <div class="project">
-                    <h4>Dummy title</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam, hic</p>
+                    <div class="project-text">
+                        <h4>Dummy title</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam, hic</p>
+                    </div>
                     <div class="icon-links">
                         <img src="images/heart-plus-outline.svg" alt="add">
                         <img src="images/information-outline.svg" alt="info">
@@ -57,8 +61,10 @@
                     </div>
                 </div>
                 <div class="project">
-                    <h4>Dummy title</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam, hic</p>
+                    <div class="project-text">
+                        <h4>Dummy title</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam, hic</p>
+                    </div>
                     <div class="icon-links">
                         <img src="images/heart-plus-outline.svg" alt="add">
                         <img src="images/information-outline.svg" alt="info">
@@ -66,8 +72,10 @@
                     </div>
                 </div>
                 <div class="project">
-                    <h4>Dummy title</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam, hic</p>
+                    <div class="project-text">
+                        <h4>Dummy title</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam, hic</p>
+                    </div>
                     <div class="icon-links">
                         <img src="images/heart-plus-outline.svg" alt="add">
                         <img src="images/information-outline.svg" alt="info">
@@ -75,8 +83,10 @@
                     </div>
                 </div>
                 <div class="project">
-                    <h4>Dummy title</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam, hic</p>
+                    <div class="project-text">
+                        <h4>Dummy title</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam, hic</p>
+                    </div>
                     <div class="icon-links">
                         <img src="images/heart-plus-outline.svg" alt="add">
                         <img src="images/information-outline.svg" alt="info">
@@ -84,8 +94,10 @@
                     </div>
                 </div>
                 <div class="project">
-                    <h4>Dummy title</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam, hic</p>
+                    <div class="project-text">
+                        <h4>Dummy title</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam, hic</p>
+                    </div>
                     <div class="icon-links">
                         <img src="images/heart-plus-outline.svg" alt="add">
                         <img src="images/information-outline.svg" alt="info">
@@ -93,8 +105,10 @@
                     </div>
                 </div>
                 <div class="project">
-                    <h4>Dummy title</h4>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam, hic</p>
+                    <div class="project-text">
+                        <h4>Dummy title</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam, hic</p>
+                    </div>
                     <div class="icon-links">
                         <img src="images/heart-plus-outline.svg" alt="add">
                         <img src="images/information-outline.svg" alt="info">
@@ -108,7 +122,10 @@
                     <div class="announcements-container">
                         <div class="announcement announcement 1">
                             <h4>Site Maintenance</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                                Laborum iste ea sunt sit fugiat, dignissimos nulla excepturi possimus repellendus? 
+                                Voluptates repudiandae sit pariatur nihil iusto! Sed error reiciendis quas perspiciatis?</p>
                         </div>
                         <div class="announcement announcement 2">
                             <h4>Community Share Day</h4>
@@ -128,8 +145,8 @@
                                 <img src="images/male-placeholder.png" alt="profile icon photo">
                             </div>
                             <div class="trending-user-info">
-                                <p>@name</p>
-                                <p>name</p>
+                                <p>@Lorem</p>
+                                <p>Lorem</p>
                             </div>
                         </div>
                         <div class="trending-item">
@@ -137,8 +154,8 @@
                                 <img src="images/male-placeholder.png" alt="profile icon photo">
                             </div>
                             <div class="trending-user-info">
-                                <p>@name</p>
-                                <p>name</p>
+                                <p>@Ipsum</p>
+                                <p>Ipsum</p>
                             </div>
                         </div>
                         <div class="trending-item">
@@ -146,8 +163,8 @@
                                 <img src="images/male-placeholder.png" alt="profile icon photo">
                             </div>
                             <div class="trending-user-info">
-                                <p>@name</p>
-                                <p>name</p>
+                                <p>@consectetur</p>
+                                <p>Consectetur</p>
                             </div>
                         </div>
                         <div class="trending-item">
